project/quarkus-java/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartseat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartseat
  template:
    metadata:
      labels:
        app: smartseat
    spec:
      containers:
        - name: smartseat
          image: smartseat:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
