project/quarkus-java/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartseat-service
spec:
  type: NodePort
  selector:
    app: smartseat
  ports:
    - port: 80
      targetPort: 8080
