project/quarkus-java/k8s/quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartseat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartseat
  template:
    metadata:
      labels:
        app: smartseat
    spec:
      containers:
        - name: app
          image: daniel31507/smartseat-app-v2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /work/.log
              name: applogs
      volumes:
        - name: applogs
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: smartseat-service
spec:
  type: ClusterIP
  selector:
    app: smartseat
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartseat-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/connection: "upgrade"
spec:
  ingressClassName: nginx
  rules:
    - host: it220228.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartseat-service
                port:
                  number: 8080
